apollo-router/src/uplink/snapshots/apollo_router__uplink__license_stream__test__validate_audience_multiple_filtered.snap
---
source: apollo-router/src/uplink/license_stream.rs
expression: yaml
---
- fields:
    message: license audience invalid
  level: ERROR

