apollo-router/src/uplink/snapshots/apollo_router__uplink__license_stream__test__validate_audience_single_filtered.snap
---
source: apollo-router/src/uplink/license_stream.rs
expression: yaml
---
- fields:
    code: APOLLO_ROUTER_LICENSE_OFFLINE_UNSUPPORTED
    message: "the license file was valid, but was not enabled offline use"
  level: ERROR

